<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:padding="@dimen/app_padding"
    tools:context=".ui.components.LoginFragment">

    <EditText
        android:id="@+id/edit_host"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentTop = "true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"

        android:hint="@string/host_hint"
        android:textSize="18sp"
        android:focusable="true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textNoSuggestions"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_host"
        android:layout_marginBottom="5dp"

        android:hint="@string/port_hint"
        android:textSize="18sp"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textNoSuggestions"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_port"
        android:layout_marginBottom="5dp"

        android:hint="@string/username_hint"
        android:textSize="18sp"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textNoSuggestions"
        android:maxLines="1" />


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_username"
        android:layout_marginBottom="5dp"

        android:hint="@string/password_hint"
        android:textSize="18sp"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textPassword"
        android:maxLines="1" />


    <EditText
        android:id="@+id/edit_first"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_password"
        android:layout_marginBottom="5dp"

        android:hint="@string/first_hint"
        android:textSize="18sp"

        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textPersonName"
        android:maxLines="1" />


    <EditText
        android:id="@+id/edit_last"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_first"
        android:layout_marginBottom="5dp"

        android:hint="@string/last_hint"
        android:textSize="@dimen/login_form_text_size"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textPersonName"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_last"
        android:layout_marginBottom="10dp"

        android:hint="@string/email_hint"
        android:textSize="@dimen/login_form_text_size"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"


        android:text="@string/gender_label"
        android:textColor="#ffff25e6"
        android:textSize="@dimen/login_form_text_size"/>

    <RadioGroup
        android:id="@+id/radio_gender"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_text"

        android:checkedButton="@+id/radio_female"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="@string/female" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/btn_margin_bot"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginStart="@dimen/btn_margin_left_right"
            android:layout_marginEnd="@dimen/btn_margin_left_right"
            android:text="@string/btn_login"
            android:textSize="@dimen/btn_text_size"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/btn_margin_bot"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginStart="@dimen/btn_margin_left_right"
            android:layout_marginEnd="@dimen/btn_margin_left_right"
            android:text="@string/btn_register"
            android:textSize="@dimen/btn_text_size"/>

    </LinearLayout>

</RelativeLayout>